[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-rag-debugger"
version = "0.1.0"
description = "OpenEnv RAG Pipeline Debugger environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi==0.135.3",
    "uvicorn[standard]==0.42.0",
    "pydantic==2.12.5",
    "pytest==9.0.2",
    "httpx==0.28.1",
    "openai==1.68.2",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["api", "environment", "server"]
